# vacancy_pipeline_py

./: .env  .env.example  .gitignore  README.md  RUNBOOK.md  pyproject.toml  pytest.ini  requirements.txt
.githooks/: pre-commit
.github/workflows/: verify-pipeline.yml
config/: search_config.json
data/: scored_vacancies.json  vacancies_mail_glassdoor.json
data/runs/: run_20260305T161036Z.json  run_20260305T161540Z.json  run_20260305T161638Z.json  run_20260305T161639Z.json  run_20260305T161644Z.json  run_20260305T161752Z.json  run_20260305T162036Z.json  run_20260305T162040Z.json  run_20260305T162355Z.json  run_20260305T162400Z.json  run_20260305T162509Z.json  run_20260305T162706Z.json  run_20260305T162707Z.json  run_20260305T162951Z.json
docs/ops/: location-policy.md  project-memory.md
docs/plans/: 2026-03-05-python-migration-design.md  2026-03-05-python-migration-plan.md
scripts/: orchestrate.py  send_telegram.py  sync_supabase.py  verify_pipeline.py
src/vacancy_pipeline_py/: __init__.py  __main__.py  gmail_client.py  gmail_parser.py  merge.py  orchestrate.py  paths.py  scoring.py  settings.py  supabase_sync.py  telegram_sender.py  vacancy_utils.py  verification.py
tests/: test_auth_migration.py  test_cli_entrypoints.py  test_cli_output.py  test_gmail_parser.py  test_merge.py  test_orchestrate.py  test_orchestrate_gmail_fallback.py  test_paths.py  test_scoring.py  test_settings.py  test_supabase_sync.py  test_telegram_sender.py  test_vacancy_utils.py
tests/fixtures/: email_jobs_glassdoor_react_sample.html  email_jobs_sample.html
(+8 files in other folders)
